Update location permissions copy

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -184,8 +184,8 @@
     "get_more_info": "Get more info on {{technology}}",
     "have_a_positive_test": "Have a positive test result code?",
     "if_you_have_a_code": "Report your result to help keep your community safe.",
-    "location_info_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Detection. However, {{applicationName}} does NOT track or keep a record of your location.",
-    "location_info_subheader": "{{applicationName}} never accesses your location data and your device is never tracked.",
+    "location_info_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Detection. {{applicationName}} does NOT track or keep a record of your location.",
+    "location_info_subheader": "{{applicationName}} does not track or keep a record of your location",
     "not_feeling_well": "Not feeling well?",
     "proximity_tracing_info_body_1": "If smartphones with the app installed are turned on, have Bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_info_body_2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted within 14 days.",
