--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -85,7 +85,7 @@
     "consent_subheader_1": "Why should I share?",
     "consent_subheader_2": "How does it work?",
     "consent_warning_title": "Warning!",
-    "consent_warning_message": "Continuing will void your positive test result code. If you would like to share your positive diagnosis in the future, you will first need to get a new positive test result code.",
+    "consent_warning_message": "Continuing will void your verification code. If you would like to share your positive diagnosis in the future, you will first need to get a new verification code.",
     "enable_exposure_notifications_body": "You must enable exposure notifications to report a positive test result.",
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "error": {
@@ -187,7 +187,7 @@
     "enter_symptoms": "Enter symptoms",
     "fix": "Fix issues with {{technology}}",
     "get_more_info": "Get more info on {{technology}}",
-    "have_a_positive_test": "Have a positive test result code?",
+    "have_a_positive_test": "Have a verification code?",
     "if_you_have_a_code": "Report your result to help keep your community safe.",
     "location_info_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Detection. {{applicationName}} does NOT track or keep a record of your location.",
     "location_info_subheader": "{{applicationName}} does not track or keep a record of your location",
@@ -204,7 +204,7 @@
     "report_result": "Report Result",
     "request_call": "Request Call",
     "take_assessment": "Take Assessment",
-    "to_submit_your_test": "To submit your positive test result, you'll need to get your positive test result code from a contact tracer."
+    "to_submit_your_test": "To submit your positive test result, you'll need to get your verification code from a contact tracer."
   },
   "label": {
     "check": "Checkmark",
@@ -242,7 +242,7 @@
     "i_am_over": "Yes, I am over {{minimumAge}}",
     "location_alert_body": "To use Bluetooth scanning, the device location setting needs to be turned on.",
     "location_alert_header": "Enable Location access from \"{{applicationName}}\"",
-    "location_body": "Google requires that devices running Android 10 or below have location services enabled to use Exposure Detection. However, {{applicationName}} does NOT track or keep a record of your location.",
+    "location_body": "Google requires that devices running Android 10 or below have location services enabled to use Bluetooth scanning for Exposure Detection. However, {{applicationName}} does NOT track or keep a record of your location.",
     "location_header": "Activate Location",
     "location_subheader": "{{applicationName}} never accesses your location data and your device is never tracked.",
     "no_take_me": "No, take me back",
@@ -258,7 +258,7 @@
     "protect_privacy": {
       "body_1": "These IDs do not contain any personal information and change every 10-20 minutes to protect your identity.",
       "body_2": "Phones swap random IDs with other devices using Bluetooth Low Energy. This allows {{applicationName}} to keep track of your daily encounters anonymously, even when you don’t have it open on your device.",
-      "body_3": "After testing positive for COVID-19, users can share a passcode with {{applicationName}} to verify their diagnosis. Their phone’s recent random IDs are flagged and securely uploaded to the server. This verification process helps prevent false positive reports.",
+      "body_3": "After testing positive for COVID-19, users can share a verification code with {{applicationName}} to verify their diagnosis. Their phone’s recent random IDs are flagged and securely uploaded to the server. This verification process helps prevent false positive reports.",
       "body_4": "If a flagged ID matches with an ID stored on your phone, this indicates you may have encountered someone who has tested positive for COVID-19. This is how {{applicationName}} can determine if you may have been exposed to the virus.",
       "body_5": "If there’s a match, {{applicationName}} will notify you and provide further guidance from your health department.\n\nThis is how {{applicationName}} can empower you to make decisions about your health, and keep your community safe, all without knowing who you are or where you’ve been.",
       "subheader_1": "When you turn on Exposure Notifications, your phone is tagged with frequently-changing, random IDs",
