Fix various display bugs and issues
Why: there are various bugs and issues to be fixed at the view layer.

This commit:
- Fixes a display issue with the "How we protect your privacy" button on the publish consent form for the sharing of positive test results
- Adds a link to the CDC Coronavirus Self-Checker page to the self assessment intro screen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -383,6 +383,7 @@
       "title": "How are you feeling?"
     },
     "intro": {
+      "learn_more": "Learn more about the CDC Coronavirus Self-Checker this Self Assessment is based on",
       "agree_and_start_assessment": "Agree and start assessment",
       "covid19_self_assessment": "COVID-19 Self Assessment",
       "find_out_how_to_care": "Find out how to care for yourself and others after close contact with someone positive for COVID-19",
