work in progress.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -281,7 +281,7 @@
     "screen2_header": "Your phone remembers other devices it meets, but it won’t identify you to anyone.",
     "screen2_image_label": "Two people on their phones",
     "screen3_button": "What if I’m exposed?",
-    "screen3_header": "No personally identifiable information ever leaves your phone.",
+    "screen3_header": "Your personally identifiable information never leaves your phone.",
     "screen3_image_label": "A person in front of a locked phone",
     "screen4_button": "Get started",
     "screen4_header": "The app will notify you if you may have been exposed to COVID-19",
