Update navigation on Active Exposure Notifications and Activate Location
Why: currently, when a user reaches either the Activate Exposure Notifications or Activate Location screen and has already activated the respective service, they will be automatically navigated to the next screen in the activation flow. We would like to instead inform the user that the respective service is turned on and present a button they can use to continue to the next activation step.

This commit:
- Removes the code that navigates the user to the next activation screen automatically
- Conditionally renders either the button to enable the service or a notice that the service is on and a continue button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -271,6 +271,8 @@
       "subheader_4": "Each phone periodically pings the server for the list of flagged IDs and looks for matches",
       "subheader_5": "You will be notified if {{applicationName}} finds a positive match with a flagged ID"
     },
+    "location_services_already_active": "Location services are active",
+    "proximity_tracing_already_active": "Exposure notifications are active",
     "proximity_tracing_body1": "If smartphones with the app installed are turned on, have bluetooth enabled, and are near each other for a period of time, an encounter is registered on your device.",
     "proximity_tracing_body2": "In the event of an encounter, your data, and information remain anonymous. The app doesn’t store any personal data. Only random IDs are exchanged. These are deleted after 14 days.",
     "proximity_tracing_button": "Activate Exposure Notifications",
