--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -83,7 +83,7 @@
       "what_is_a_verification_code": "What is a verification code?"
     },
     "user_details_form": {
-      "subheader": "Please provide the date of your test and phone number.",
+      "subheader": "Please provide your phone number and test date and we'll text you your verification code.",
       "test_details": "Test Details",
       "test_date": "Test date",
       "phone_number": "Phone number"
